--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,13 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
+deku = "0.12"
+log = "0.4"
+reqwest = { version = "0.11", features = ["json"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+thiserror = "1.0"
+
+[dev-dependencies]
+pretty_env_logger = "0.4"
+tokio = { version = "1.7", features = ["macros"] }
