--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,16 @@ edition = "2018"
 
 [dependencies]
 deku = "0.12"
+flate2 = "1.0.20"
+futures-util = "0.3.15"
+hex = "0.4.3"
 log = "0.4"
-reqwest = { version = "0.11", features = ["json"] }
-serde = { version = "1.0", features = ["derive"] }
+reqwest = { version = "0.11", features = [ "json" ] }
+serde = { version = "1.0", features = [ "derive" ] }
 serde_json = "1.0"
 thiserror = "1.0"
+tokio = { version = "1.7", features = [ "macros", "time" ] }
+tokio-tungstenite = { version = "0.14", features = [ "native-tls" ] }
 
 [dev-dependencies]
 pretty_env_logger = "0.4"
-tokio = { version = "1.7", features = ["macros"] }
